examples/neg/unhandled_under_handler.effekt
module unhandled_under_handler

// should not type check
// java.lang.RuntimeException: No value found for Flip2
effect Flip(): Boolean
effect MyPrint(n: Int): Unit

def main(): Unit / { Console } = {

  try {
    do Flip();
    ()
  } with {
    case MyPrint(n: Int) => resume(())
  }
}
